[gd_scene load_steps=19 format=2]

[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-idle/hell-hound-idle-0.png" type="Texture" id=1]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-idle/hell-hound-idle-1.png" type="Texture" id=2]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-idle/hell-hound-idle-2.png" type="Texture" id=3]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-idle/hell-hound-idle-3.png" type="Texture" id=4]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-idle/hell-hound-idle-4.png" type="Texture" id=5]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-idle/hell-hound-idle-5.png" type="Texture" id=6]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-run/hell-hound-run-1.png" type="Texture" id=7]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-run/hell-hound-run-0.png" type="Texture" id=8]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-run/hell-hound-run-2.png" type="Texture" id=9]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-run/hell-hound-run-3.png" type="Texture" id=10]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-run/hell-hound-run-4.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Hell Hound.gd" type="Script" id=12]
[ext_resource path="res://ASSETS_SWING/Hell Hound/hell-hound-jump.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 13 )
region = Rect2( 65, 0, 65, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Run",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.94612, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.5456, 29.003 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.1779, 10.8424 )

[node name="Hell Hound" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 12 )
GRAVITY = 300

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Die"
offset = Vector2( 0, -6 )

[node name="HurtBox" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 1 )
shape = SubResource( 3 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 128

[node name="DetectionZone" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( -72, 0 )
shape = SubResource( 4 )

[node name="DetectionZone2" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 72, 0 )
shape = SubResource( 4 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="HitArea" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 5 )

[node name="DeathAwait" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="DeathAwait" to="." method="_on_DeathAwait_timeout"]
